# wind-turbine-power-curve-diagram

./: README.md  main.py  pyproject.toml
